_generated-doc/2.7/config/quarkus-kafka-streams-config-group-key-store-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-streams-config-group-key-store-config_configuration]]link:#quarkus-kafka-streams-config-group-key-store-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`

[.description]
--
Key store type
--|string 
|


a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`

[.description]
--
Key store location
--|string 
|


a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`

[.description]
--
Key store password
--|string 
|


a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.key]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.key[quarkus.kafka-streams.ssl.keystore.key]`

[.description]
--
Key store private key
--|string 
|


a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.certificate-chain]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus.kafka-streams.ssl.keystore.certificate-chain[quarkus.kafka-streams.ssl.keystore.certificate-chain]`

[.description]
--
Key store certificate chain
--|string 
|

|===