_generated-doc/3.8/config/quarkus-kafka-streams-config-group-key-store-config.adoc

:summaryTableId: quarkus-kafka-streams-config-group-key-store-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-streams-config-group-key-store-config_configuration]]link:#quarkus-kafka-streams-config-group-key-store-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-type]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-type[quarkus.kafka-streams.ssl.keystore.type]`


[.description]
--
Key store type

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-location]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-location[quarkus.kafka-streams.ssl.keystore.location]`


[.description]
--
Key store location

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_LOCATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_LOCATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-password]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-password[quarkus.kafka-streams.ssl.keystore.password]`


[.description]
--
Key store password

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-key]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-key[quarkus.kafka-streams.ssl.keystore.key]`


[.description]
--
Key store private key

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-certificate-chain]]`link:#quarkus-kafka-streams-config-group-key-store-config_quarkus-kafka-streams-ssl-keystore-certificate-chain[quarkus.kafka-streams.ssl.keystore.certificate-chain]`


[.description]
--
Key store certificate chain

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_CERTIFICATE_CHAIN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_STREAMS_SSL_KEYSTORE_CERTIFICATE_CHAIN+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===